--- a/main.html
+++ b/main.html
@@ -2,14 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>STYLED TABLE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
+    <table>
+        <thead>
+           <tr>
+            <th>NAME</th>
+            <th>KILLS</th>
+            <th>SAVED</th>
+            <th>DEATHS</th>
+            <th>REVIVES</th>
+            <th>WIN</th>
+           </tr>
+        </thead>
 
-        
+        <tbody>
+            <tr>
+                <td>PRANAV</td>
+                <td>10</td>
+                <td>5</td>
+                <td>0</td>
+                <td>5</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>ANKUR</td>
+                <td>10</td>
+                <td>5</td>
+                <td>0</td>
+                <td>5</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>MUDASSIR</td>
+                <td>10</td>
+                <td>5</td>
+                <td>0</td>
+                <td>5</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>HARDIK</td>
+                <td>10</td>
+                <td>5</td>
+                <td>0</td>
+                <td>5</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>KESHAV</td>
+                <td>10</td>
+                <td>5</td>
+                <td>0</td>
+                <td>5</td>
+                <td>5</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
